--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>milkcocoa game</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-            <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
-            <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-            <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+        <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css">
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
             <script src="http://127.0.0.1:3000/js/milkcocoa.js"></script>
             <script>
         	function escapeHTML(val) {
@@ -31,6 +35,10 @@
                     	$("#signup").click(function() {
                     		var email = $('#signup-form [name=email]').val()
                     		var password = $('#signup-form [name=password]').val()
+                    		var confirm = $('#signup-form [name=confirm]').val()
+                    		if(password != confirm) {
+                    			return false;
+                    		}
                         	milkcocoa.Account.signUp(email, password, {}, function(e) {
                         		if(e) {
                             		alert("signup success!!");
@@ -75,7 +83,6 @@
     </head>
     <body>
     	<script id="signup-html" type="text/html">
-		<div>
     	<form id="signup-form">
     	<input type="text" name="email" />
     	<input type="password" name="password" />
@@ -85,28 +92,35 @@
 		</script>
     	<script id="signin-html" type="text/html">
 		<div>
-    	<form id="signin-form">
-    	<input type="text" name="email" />
-    	<input type="password" name="password" />
+    	<form id="signin-form" class="form-signin" role="form">
+		<h2 class="form-signin-heading">Please sign in</h2>
+        <input type="email" name="email" class="form-control" placeholder="Email address" required autofocus>
+        <input type="password" name="password" class="form-control" placeholder="Password" required>
+        <button id="signin" class="btn btn-lg btn-primary btn-block" type="submit">SignIn</button>
         </form>
-        <button id="signin">SignIn</button>
 		</div>
 		<div>
-    	<form id="signup-form">
-    	<input type="text" name="email" />
-    	<input type="password" name="password" />
-        <button id="signup">SignUp</button>
+    	<form id="signup-form" class="form-signin" role="form">
+		<h2 class="form-signin-heading">Please sign up</h2>
+        <input type="email" name="email" class="form-control" placeholder="Email address" required autofocus>
+        <input type="password" name="password" class="form-control" placeholder="Password" required>
+        <input type="password" name="confirm" class="form-control" placeholder="Confirm" required>
+        <button id="signup" class="btn btn-lg btn-primary btn-block" type="submit">SignUp</button>
         </form>
 		</div>
 		</script>
     	<script id="memo-html" type="text/html">
-		<div>
-		memo
-        <textarea id="message-content" cols="32" rows="4"></textarea>
-        <button id="post">Post</button>
-        <div id="messages"></div>
+		<div class="panel panel-primary">
+			<div class="panel-heading">
+				<h3 class="panel-title">Your Memo</h3>
+			</div>
+			<div class="panel-body">
+				<textarea id="message-content" cols="32" rows="4"></textarea>
+		        <button id="post" class="btn btn-primary">add memo</button>
+        		<div id="messages"></div>
+			</div>
 		</div>
 		</script>
-		<div id="content"></div>
+		<div id="content" class="container"></div> <!-- /container -->
     </body>
 </html>
