--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
                     	$("#signin").click(function() {
                     		var email = $('#signin-form [name=email]').val()
                     		var password = $('#signin-form [name=password]').val()
-                        	milkcocoa.Account.signIn(email, password, function(e, dataStore) {
+                        	milkcocoa.Account.signIn(email, password, function(e) {
                         		console.log(e);
                         		if(e.success) {
-                        			refresh_html("memo-html", {userDataStore : dataStore});
+                            		var ds = new milkcocoa.DataStore("memo." + e.user.id);
+                        			refresh_html("memo-html", {userDataStore : ds});
                         		}else{
                             		alert("signin failed.");
                         		}
@@ -51,16 +52,16 @@
             		}else if(id == "signup-html") {
             		}else if(id == "memo-html") {
                         var ds = args.userDataStore;
-                        ds.child("messages").findMany(-7, 7, function(messageStore, e) {
+                        ds.findMany({}).done(function(e) {
                             for(var i=0;i < e.length;i++) {
                                 $("#messages").append('<div id="'+e[i].id+'">' + escapeHTML(e[i].content) + "</div>");
                             }
                         });
-                        ds.child("messages").on("push", function(e) {
+                        ds.on("push", function(e) {
                             $("#messages").append(escapeHTML(e.content) + "<br>");
                         });
                         $("#post").click(function() {
-                            ds.child("messages").push({
+                            ds.push({
                                 title : "タイトル",
                                 content : $("#message-content").val()
                             }, function(e) {
@@ -72,7 +73,8 @@
                 pour_the_milk("127.0.0.1:3000", "loginapp", function() {
                 	milkcocoa.Account.getCurrentUser( function(e, dataStore) {
                 		if(e.success) {
-                			refresh_html("memo-html", {userDataStore : dataStore});
+                    		var ds = new milkcocoa.DataStore("memo." + e.user.id);
+                			refresh_html("memo-html", {userDataStore : ds});
                 		}else{
                 			refresh_html("signin-html")
                 		}
